--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ numpy==1.22.0;python_version<="3.10"
 numpy>=1.24.3;python_version>"3.10"
 cython>=0.29.30
 scipy>=1.11.2
-torch>=2.1
+torch
 torchaudio
 soundfile>=0.12.0
 librosa>=0.10.0
@@ -17,7 +17,7 @@ pyyaml>=6.0
 fsspec>=2023.6.0 # <= 2023.9.1 makes aux tests fail
 aiohttp>=3.8.1
 packaging>=23.1
-mutagen==1.47.0
+mutagen
 # deps for examples
 flask>=2.0.1
 # deps for inference
